--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,5 +25,41 @@
 }
 
 .no-scrollbar {
-  scrollbar-width: 4px !important;
+  scrollbar-width: 0px !important;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  width: 0px;
+}
+
+.tooltip[data-state="open"] {
+  transform-origin: left;
+  animation: scaleIn 100ms ease-out !important;
+}
+
+.tooltip[data-state="closed"] {
+  transform-origin: left;
+  animation: scaleOut 100ms ease-in !important;
+}
+
+@keyframes scaleIn {
+  from {
+    opacity: 0;
+    transform: scale(0);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes scaleOut {
+  from {
+    opacity: 1;
+    transform: scale(1);
+  }
+  to {
+    opacity: 0;
+    transform: scale(0);
+  }
 }
