--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,20 +32,20 @@
   width: 0px;
 }
 
-.tooltip[data-state="open"] {
+.tooltip {
   transform-origin: left;
-  animation: scaleIn 100ms ease-out !important;
+  animation: scaleIn 100ms ease-in-out !important;
 }
 
 .tooltip[data-state="closed"] {
   transform-origin: left;
-  animation: scaleOut 100ms ease-in !important;
+  animation: scaleOut 100ms ease-in-out !important;
 }
 
 @keyframes scaleIn {
   from {
     opacity: 0;
-    transform: scale(0);
+    transform: scale(0.5);
   }
   to {
     opacity: 1;
@@ -60,6 +60,6 @@
   }
   to {
     opacity: 0;
-    transform: scale(0);
+    transform: scale(0.5);
   }
 }
