feat: implement navigation loading bar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,6 +52,10 @@
   animation: scaleOut 100ms ease-in-out !important;
 }
 
+#nprogress {
+  opacity: 0.5;
+}
+
 @keyframes scaleIn {
   from {
     opacity: 0;
